...
    
    func alertSection(_ config: ConfigurationManager) -> SectionDefinition {
        return SectionDefinition(
            title: "Alerts",
            cells: [
                BoolCellDefinition(
                    title: "Vibration Alerts",
                    value: config.isVibrationEnabled,
                    onChange: { (value: Bool) in
                        config.isVibrationEnabled = value
                        self.loadData()
                }),
                BoolCellDefinition(
...
    
    func appSection() -> SectionDefinition {
        return SectionDefinition(
            title: "App",
            cells: [
                ActionCellDefinition(
                    title: "About Speaker Alert",
                    detail: nil,
                    hasDisclosure: true,
                    action: {
                        self.showAbout()
                }),
                ActionCellDefinition(
...
