...
            <point key="canvasLocation" x="356" y="-701"/>
        </scene>
        <!--Settings-->
        <scene sceneID="EB6-Vf-uas">
            <objects>
                <navigationController id="ndO-HV-6DD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" id="vbd-mA-mL9" customClass="FontAwesomeTabBarItem" customModule="SpeakerAlert" customModuleProvider="target">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="IconName" value="Cog"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="K4E-mm-ttL">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
